--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 /node_modules
-/.pnp
 .pnp.js
 .yarn/install-state.gz
 
@@ -11,10 +10,10 @@
 
 # next.js
 /.next/
-/out/
 
 # production
 /build
+/out/
 
 # misc
 .DS_Store
@@ -26,7 +25,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
+.env.zod
+zodconfig
 
 # vercel
 .vercel
@@ -34,3 +36,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore editor-specific files
+.vscode/
+.sublime/
+.idea/
+*.iml
+
+# Ignore package lock files
+package-lock.json
+yarn.lock
